--- a/src/css/main.css
+++ b/src/css/main.css
@@ -91,7 +91,7 @@ canvas {
   border-radius: 4px;
   cursor: pointer;
   display: inline-block;
-  font-family: "Android-7";
+  /* font-family: "Android-7"; */
   font-size: 14px;
   margin: 4px 2px;
   opacity: .8;
